fix: small tiles on small displays

--- a/static/site.css
+++ b/static/site.css
@@ -33,6 +33,7 @@ body{
     box-shadow: 0px 0px 4px 3px rgba(0,0,0,0.5);
     position: relative;
     text-shadow: 2px 2px 10px #134409;
+    max-width: 87%;
 }
 
 .tile:hover{
@@ -100,4 +101,10 @@ body{
     right: 13px;
     font-size: 10px;
     color: black;
+}
+
+@media(max-width: 500px){
+    .tile{
+        font-size: 3.5vw !important;
+    }
 }
